# Kaggle-Intensive-Vibe-Coding-Capstone-Project

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/: transactions.csv
deployment/: __init__.py  agent.py
docs/: DEPLOY.md  architecture.md
notebooks/: demo.ipynb
scripts/: generate_data.py
src/ledgerlens/: __init__.py  agents.py  cli.py  config.py  data_store.py  finance.py  local_llm.py  mcp_server.py  models.py  orchestrator.py  response.py  security.py  tools.py
tests/: conftest.py  test_agents.py  test_data_store.py  test_finance.py  test_local_llm.py  test_mcp_integration.py  test_mcp_server.py  test_orchestrator.py  test_security.py  test_tools.py
