[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerlens"
version = "0.1.0"
description = "LedgerLens - a personal finance concierge built as an ADK multi-agent system backed by a custom MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LedgerLens" }]

# Base runtime deps. Note that `google-adk` is intentionally an *optional* extra:
# the MCP server, the domain tools, the security layer, and the deterministic
# fallback orchestrator all run (and are tested) without it. Installing the
# `adk` extra lights up the live Gemini-backed multi-agent path.
dependencies = [
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
adk = ["google-adk>=1.0.0"]
# Talk to a local / self-hosted OpenAI-compatible model (vLLM, LM Studio, ...).
local = ["litellm>=1.40.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
# Interactive / one-shot concierge CLI.
ledgerlens = "ledgerlens.cli:main"
# Stdio MCP server entry point (what an MCP client such as ADK's MCPToolset,
# Claude Desktop, or `mcp dev` connects to).
ledgerlens-mcp = "ledgerlens.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
